# llmo

./: .gitignore  LICENSE  README.md  pyproject.toml
llmo/: chat.py  cli.py  constants.py  gui.py  layout.css  llms.py  shell_mode.py
tests/: test_openai.py
