
[project]
name = "llmo"
version = "0.1.6"
description = "AI pair programmer"
authors = [
    {name = "Stephan Fitzpatrick", email = "stephan@knowsuchagency.com"},
]
dependencies = [
    "textual>=0.26.0",
    "openai>=0.27.6",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
Source = "https://github.com/knowsuchagency/llmo"

[project.scripts]
llmo = "llmo.chat:main"
lm = "llmo.chat:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.scripts]
debug = "textual console -x EVENT -x WORKER -x DEBUG -x SYSTEM"

[tool.pdm.dev-dependencies]
dev = [
    "textual[dev]>=0.26.0",
]
